<resources>

    <!-- MainActivity -->
    <string name="app_name">discal</string>
    <string name="tx_app">DisCalは、値段と割引率を入力して、計算をタップするだけで簡単に割引計算ができます。</string>

    <string name="tx_price">商品金額(税込)</string>
    <string name="et_price">金額を入れてください</string>
    <string name="et_price_error">金額を入力してください</string>

    <string name="button_1">％引</string>
    <string name="button_2">割引</string>

    <string name="tx_offprice">％引</string>
    <string name="et_offprice">割引率を入れてください</string>
    <string name="et_offprice_error">割引率を入力してください</string>

    <string name="tx_offprice2">割引</string>
    <string name="et_offprice2">割引率を入れてください</string>
    <string name="et_offprice2_error">割引率を入力してください</string>

    <string name="b_keisann_1">計算する</string>
    <string name="b_keisann_2">計算する</string>

    <!-- ResultActivity -->
    <string name="tx_kekka_price">結果</string>
    <string name="tv_kekka_disp">結果</string>
    <string name="set_kekka">%1$,3d円</string>

    <string name="tx_kekka_zeikomi_price">税込金額</string>
    <string name="tv_kekka_zeikomi_disp">税込金額</string>
    <string name="set_kekka_zeikomi">%1$,3d円</string>

    <string name="b_restart">もう一度計算する</string>

</resources>
